--- a/MediCare/composer.json
+++ b/MediCare/composer.json
@@ -12,7 +12,8 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "php-ai/php-ml": "^0.10.0"
+        "php-ai/php-ml": "^0.10.0",
+        "spatie/browsershot": "^3.59"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
